# VisitLog

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  _env (2).
backend/src/: pyproject.toml
backend/src/cameras/: config.py  database.py  import_visits.py  main.py  populate_mock_data.py  rd_csv.py
backend/src/cameras/auth/: models.py  routers.py  schemas.py  utils.py
backend/src/cameras/data/: yolo_11_retinaface.csv
backend/src/cameras/kafka/: consumer.py
backend/src/cameras/migrations/: env.py
backend/src/cameras/migrations/versions/: 5164895f84bc_.py  9580fcb0dea5_initial.py  e08277201232_initial.py
backend/src/cameras/video_info/: dependences.py  models.py  routers.py  schemas.py  services.py
bot/: Dockerfile  requirements.txt
bot/src/: main.py
bot/src/app/: config.py
bot/src/app/handlers/: base.py
face_tracking/: embeddings_Facenet512.npz  face_recognition.py  faces_embeddings.npz  process_drive_videos.py  recognized_people.csv  requirements.txt  test.py
face_tracking/utils/: face_detector.py  face_embedder.py  searcher.py
facehunter/: Dockerfile
facehunter/src/: pyproject.toml
facehunter/src/facehunter/: main.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: attendance-stats.tsx  attendance-table.tsx  time-range-picker.tsx
frontend/src/components/ui/: carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  progress.tsx  radio-group.tsx  resizable.tsx  sidebar.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx  toast.tsx  toaster.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
frontend/src/services/: api.ts
video_recording/: Dockerfile  main.py  requirements.txt
